@startuml

title __ENTITY_SYSTEMS's Class Diagram__\n

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.BoundsSystem {
            - entities : ImmutableArray<Entity>
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        interface no.ntnu.idi.apollo69.game_engine.entity_systems.InputHandlerInterface {
            {abstract} + boost()
            {abstract} + move()
            {abstract} + shoot()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.MovementSystem {
            - entities : ImmutableArray<Entity>
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem {
            - player : Entity
            + PlayerControlSystem()
            + boost()
            + move()
            + shoot()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.SendPositionSystem {
            - interval : float
            - player : Entity
            - timeAccumulator : float
            + SendPositionSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.UpdateGameStateSystem {
            - interval : float
            - players : ImmutableArray<Entity>
            - timeAccumulator : float
            + UpdateGameStateSystem()
            + addedToEngine()
            + update()
            - parseGameState()
        }
      }
    }
  }
  

  no.ntnu.idi.apollo69.game_engine.entity_systems.BoundsSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.BoundsSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.game_engine.entity_systems.MovementSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem .up.|> no.ntnu.idi.apollo69.game_engine.entity_systems.InputHandlerInterface
  no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.game_engine.entity_systems.SendPositionSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.SendPositionSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.game_engine.entity_systems.UpdateGameStateSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.UpdateGameStateSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
